test/spec_vectors/type-rec/fail/module_12.wat
(module (rec (type $f1 (func)) (type (struct))) (rec (type $f2 (func)) (type (struct)) (type (func))) (global (ref $f1) (ref.func $f)) (func $f (type $f2)))